# project_workshop_team_task

02/: CMakeLists.txt  main.cpp
03/: CMakeLists.txt  main.cpp
04/: CMakeLists.txt  main.cpp
